extensions/salesforce-to-canvas-integration/salesforce/force-app/main/default/objects/Webhook_Config__mdt/Webhook_Config__mdt.object-meta.xml
<CustomObject>
    <label>Webhook Config</label>
    <pluralLabel>Webhook Configs</pluralLabel>
</CustomObject>