extensions/salesforce-to-canvas-integration/salesforce/force-app/main/default/objects/Webhook_Config__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <type>Url</type>
    <inlineHelpText>The full Canvas plugin webhook URL the emitter posts to. Set this on the record named Default. The host must also be allow listed in the Canvas Plugin Webhook remote site setting.</inlineHelpText>
</CustomField>