extensions/salesforce-to-canvas-integration/salesforce/force-app/main/default/objects/Webhook_Config__mdt/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <label>Fields</label>
    <type>LongTextArea</type>
    <length>2000</length>
    <inlineHelpText>A comma separated list of Salesforce field API names the sync sends, set on the record named Default. Mirror the plugin field mapping SF_FIELD_MAPPING_JSON. The emitter validates each name against the Contact describe, so an unknown name is skipped rather than breaking the whole sync. A delete always sends the Id only.</inlineHelpText>
</CustomField>