extensions/salesforce-to-canvas-integration/salesforce/force-app/main/default/objects/Webhook_Config__mdt/fields/Secret__c.field-meta.xml
<CustomField>
    <fullName>Secret__c</fullName>
    <label>Secret</label>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText>The shared HMAC secret. Must equal the Canvas plugin secret SF_WEBHOOK_SECRET. Set this on a record named Default, the value is deliberately not kept in source.</inlineHelpText>
</CustomField>